// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`onboardingMachine matches snapshot accumulating user messages when selecting options: after first option selection 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863368879-0.40046283286636775",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863368879,
        "type": "text",
      },
      {
        "id": "msg-1765863368879-0.5984589831754387",
        "sender": "paula",
        "timestamp": 1765863368879,
        "type": "typing",
        "typing": true,
      },
    ],
    "selectedOptions": [
      "option2-step1",
    ],
    "typing": true,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step1",
  },
  "nextEvents": [
    "option1-step2",
    "option2-step2",
    "option3-step2",
  ],
  "nextEventsT": [
    "option1-step2",
    "option2-step2",
    "option3-step2",
  ],
  "value": "step2",
}
`;

exports[`onboardingMachine matches snapshot accumulating user messages when selecting options: after second option selection 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863368879-0.40046283286636775",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863368879,
        "type": "text",
      },
      {
        "id": "msg-1765863369879-0.08888517759887538",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863369879,
        "type": "text",
      },
      {
        "id": "msg-1765863369879-0.09015221562326825",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863369879,
        "type": "post",
      },
    ],
    "selectedOptions": [
      "option2-step1",
    ],
    "typing": false,
  },
  "event": {
    "optionText": "Option 1",
    "type": "option1-step2",
  },
  "nextEvents": [],
  "nextEventsT": [],
  "value": "completed",
}
`;

exports[`onboardingMachine matches snapshot after typing timeout shows greeting message 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863361879-0.4347952912562869",
        "sender": "paula",
        "text": "step1.greeting",
        "timestamp": 1765863361879,
        "type": "text",
      },
    ],
    "selectedOptions": [],
    "typing": false,
  },
  "event": {
    "type": "$$initial",
  },
  "nextEvents": [
    "option1-step1",
    "option2-step1",
    "option3-step1",
  ],
  "nextEventsT": [
    "option1-step1",
    "option2-step1",
    "option3-step1",
  ],
  "value": "initial",
}
`;

exports[`onboardingMachine matches snapshot following step1 -> step2 -> step3 path: after step1 -> step2 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863361879-0.8374175639827837",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863361879,
        "type": "text",
      },
      {
        "id": "msg-1765863361879-0.895625038264738",
        "sender": "paula",
        "timestamp": 1765863361879,
        "type": "typing",
        "typing": true,
      },
    ],
    "selectedOptions": [
      "option2-step1",
    ],
    "typing": true,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step1",
  },
  "nextEvents": [
    "option1-step2",
    "option2-step2",
    "option3-step2",
  ],
  "nextEventsT": [
    "option1-step2",
    "option2-step2",
    "option3-step2",
  ],
  "value": "step2",
}
`;

exports[`onboardingMachine matches snapshot following step1 -> step2 -> step3 path: after step2 -> step3 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863361879-0.8374175639827837",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863361879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.010393761823040082",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863362879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.6389661154203142",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863362879,
        "type": "post",
      },
      {
        "id": "msg-1765863362879-0.008492545731564105",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863362879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.3136293822709244",
        "sender": "paula",
        "timestamp": 1765863362879,
        "type": "typing",
        "typing": true,
      },
    ],
    "selectedOptions": [
      "option2-step1",
      "option2-step2",
    ],
    "typing": true,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step2",
  },
  "nextEvents": [
    "option1-step3",
    "option2-step3",
  ],
  "nextEventsT": [
    "option1-step3",
    "option2-step3",
  ],
  "value": "step3",
}
`;

exports[`onboardingMachine matches snapshot following step1 -> step2 -> step3 path: after step2 typing timeout 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863361879-0.8374175639827837",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863361879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.010393761823040082",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863362879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.6389661154203142",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863362879,
        "type": "post",
      },
    ],
    "selectedOptions": [
      "option2-step1",
    ],
    "typing": false,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step1",
  },
  "nextEvents": [
    "option1-step2",
    "option2-step2",
    "option3-step2",
  ],
  "nextEventsT": [
    "option1-step2",
    "option2-step2",
    "option3-step2",
  ],
  "value": "step2",
}
`;

exports[`onboardingMachine matches snapshot following step1 -> step2 -> step3 path: after step3 typing timeout 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863361879-0.8374175639827837",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863361879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.010393761823040082",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863362879,
        "type": "text",
      },
      {
        "id": "msg-1765863362879-0.6389661154203142",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863362879,
        "type": "post",
      },
      {
        "id": "msg-1765863362879-0.008492545731564105",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863362879,
        "type": "text",
      },
      {
        "id": "msg-1765863363879-0.03558651892405751",
        "sender": "paula",
        "text": "step3.tips",
        "timestamp": 1765863363879,
        "type": "text",
      },
    ],
    "selectedOptions": [
      "option2-step1",
      "option2-step2",
    ],
    "typing": false,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step2",
  },
  "nextEvents": [
    "option1-step3",
    "option2-step3",
  ],
  "nextEventsT": [
    "option1-step3",
    "option2-step3",
  ],
  "value": "step3",
}
`;

exports[`onboardingMachine matches snapshot going through example and completing after delay: after auto-complete (completed state) 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863363879-0.8981232329924361",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863363879,
        "type": "text",
      },
      {
        "id": "msg-1765863364879-0.795319322300791",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863364879,
        "type": "text",
      },
      {
        "id": "msg-1765863364879-0.07402705426703027",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863364879,
        "type": "post",
      },
      {
        "id": "msg-1765863364879-0.5203501416192885",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863364879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.4467651491946715",
        "sender": "paula",
        "text": "step3.tips",
        "timestamp": 1765863365879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.742386884690059",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863365879,
        "type": "text",
      },
      {
        "id": "msg-1765863366879-0.1872286059655912",
        "sender": "paula",
        "text": "example.message",
        "timestamp": 1765863366879,
        "type": "text",
      },
    ],
    "selectedOptions": [
      "option2-step1",
      "option2-step2",
      "option2-step3",
    ],
    "typing": false,
  },
  "event": {
    "type": "AUTO_COMPLETE",
  },
  "nextEvents": [],
  "nextEventsT": [],
  "value": "completed",
}
`;

exports[`onboardingMachine matches snapshot going through example and completing after delay: after example typing timeout 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863363879-0.8981232329924361",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863363879,
        "type": "text",
      },
      {
        "id": "msg-1765863364879-0.795319322300791",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863364879,
        "type": "text",
      },
      {
        "id": "msg-1765863364879-0.07402705426703027",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863364879,
        "type": "post",
      },
      {
        "id": "msg-1765863364879-0.5203501416192885",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863364879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.4467651491946715",
        "sender": "paula",
        "text": "step3.tips",
        "timestamp": 1765863365879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.742386884690059",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863365879,
        "type": "text",
      },
      {
        "id": "msg-1765863366879-0.1872286059655912",
        "sender": "paula",
        "text": "example.message",
        "timestamp": 1765863366879,
        "type": "text",
      },
    ],
    "selectedOptions": [
      "option2-step1",
      "option2-step2",
      "option2-step3",
    ],
    "typing": false,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step3",
  },
  "nextEvents": [
    "AUTO_COMPLETE",
  ],
  "nextEventsT": [
    "AUTO_COMPLETE",
  ],
  "value": "example",
}
`;

exports[`onboardingMachine matches snapshot going through example and completing after delay: after selecting option2-step3 (example state) 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
      {
        "id": "msg-1765863363879-0.8981232329924361",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863363879,
        "type": "text",
      },
      {
        "id": "msg-1765863364879-0.795319322300791",
        "sender": "paula",
        "text": "step2.explanation",
        "timestamp": 1765863364879,
        "type": "text",
      },
      {
        "id": "msg-1765863364879-0.07402705426703027",
        "post": {
          "contentKey": "echoPost",
          "handle": "@climate_truth_warrior",
          "mediaType": "image",
          "mediaUrl": "/images/example/echo-post-img.jpg",
          "name": "Echo",
        },
        "sender": "echo",
        "timestamp": 1765863364879,
        "type": "post",
      },
      {
        "id": "msg-1765863364879-0.5203501416192885",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863364879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.4467651491946715",
        "sender": "paula",
        "text": "step3.tips",
        "timestamp": 1765863365879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.742386884690059",
        "sender": "user",
        "text": "Option 2",
        "timestamp": 1765863365879,
        "type": "text",
      },
      {
        "id": "msg-1765863365879-0.9389149230246263",
        "sender": "paula",
        "timestamp": 1765863365879,
        "type": "typing",
        "typing": true,
      },
    ],
    "selectedOptions": [
      "option2-step1",
      "option2-step2",
      "option2-step3",
    ],
    "typing": true,
  },
  "event": {
    "optionText": "Option 2",
    "type": "option2-step3",
  },
  "nextEvents": [
    "AUTO_COMPLETE",
  ],
  "nextEventsT": [
    "AUTO_COMPLETE",
  ],
  "value": "example",
}
`;

exports[`onboardingMachine matches snapshot when selecting option1 in step1 (completes immediately) 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
    ],
    "selectedOptions": [],
    "typing": true,
  },
  "event": {
    "optionText": "Let's go",
    "type": "option1-step1",
  },
  "nextEvents": [],
  "nextEventsT": [],
  "value": "completed",
}
`;

exports[`onboardingMachine matches snapshot with initial state 1`] = `
{
  "context": {
    "messages": [
      {
        "id": "msg-1765863360879-0.07856811676669129",
        "sender": "paula",
        "timestamp": 1765863360879,
        "type": "typing",
        "typing": true,
      },
    ],
    "selectedOptions": [],
    "typing": true,
  },
  "event": {
    "type": "$$initial",
  },
  "nextEvents": [
    "option1-step1",
    "option2-step1",
    "option3-step1",
  ],
  "nextEventsT": [
    "option1-step1",
    "option2-step1",
    "option3-step1",
  ],
  "value": "initial",
}
`;
